--- a/refs.bib
+++ b/refs.bib
@@ -215,6 +215,12 @@ location = {Lausanne, Switzerland},
 series = {ASPLOS 2022}
 }
 
+@article{melchert2021automated,
+  title={Automated design space exploration of cgra processing element architectures using frequent subgraph analysis},
+  author={Melchert, Jackson and Feng, Kathleen and Donovick, Caleb and Daly, Ross and Barrett, Clark and Horowitz, Mark and Hanrahan, Pat and Raina, Priyanka},
+  journal={arXiv preprint arXiv:2104.14155},
+  year={2021}
+}
 
 @INPROCEEDINGS{dora,
   author={Watkins, Matthew A. and Nowatzki, Tony and Carno, Anthony},
