--- a/8_conclusion.tex
+++ b/8_conclusion.tex
@@ -1,2 +1,5 @@
 \chapter{Conclusion}
 \label{chapter:conclusion}
+\paragraph{Energy-efficiency matters at all scales}
+\paragraph{Extreme heterogeneity is not the answer}
+\paragraph{At last mass adoption of pure dataflow}
