--- a/refs.bib
+++ b/refs.bib
@@ -215,6 +215,8 @@ location = {Lausanne, Switzerland},
 series = {ASPLOS 2022}
 }
 
+@misc{ptx, title={Parallel thread execution ISA version 7.7}, url={https://docs.nvidia.com/cuda/parallel-thread-execution/index.html}, journal={NVIDIA Documentation Center}} 
+
 @article{melchert2021automated,
   title={Automated design space exploration of cgra processing element architectures using frequent subgraph analysis},
   author={Melchert, Jackson and Feng, Kathleen and Donovick, Caleb and Daly, Ross and Barrett, Clark and Horowitz, Mark and Hanrahan, Pat and Raina, Priyanka},
