--- a/paper.tex
+++ b/paper.tex
@@ -165,19 +165,13 @@ Pittsburgh, Pennsylvania 15213
 %	ABSTRACT PAGE
 %-------------------------------------------------------------------------------
 
-\begin{abstract}
-\addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
-\end{abstract}
+\include{abstract}
 
 %-------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
 %-------------------------------------------------------------------------------
 
-\begin{acknowledgements}
-\addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
-\end{acknowledgements}
+\include{ack}
 
 %-------------------------------------------------------------------------------
 %	LIST OF CONTENTS/FIGURES/TABLES PAGES
