first pass at ack

--- a/ack.tex
+++ b/ack.tex
@@ -1,4 +1,62 @@
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
+There are many people to thank for helping me throughout my PhD.
+% 
+First my research advisors, Professors Brandon Lucia and Nathan Beckmann.
+% 
+Brandon and Nathan have taught me how to be a good researcher.
+% 
+They helped me find interesting problems and guided me in my pursuit of solutions.
+% 
+They have complementary advising styles that has a made us a formidable team.
+% 
+Brandon always has a deep understanding of the big picture, which has kept my research grounded.
+% 
+Nathan's detail-oriented approach has made my research stronger and more polished.
+% 
+The success I have enjoyed during my PhD would not have been possible without them.
+
+I am grateful to my close collaborators, including Oguz Aatli, Souradip Gosh, Professor Kenneth Mai, Danny Bankman, Professor Todd Mowry, and Professor Tony Nowatzki.
+%
+Oguz, Ken, and Danny were pivotal in our successful tape-out of \manic, guiding me throughout the tape-out process and helping me verify, debug, and optimize our design.
+% 
+Tony, Todd, and Souradip were central to the development of \riptide.
+% 
+Bouncing ideas off of Tony and Todd during weekly research meetings, helped me refine ideas and improved the design of \riptide.
+% 
+Souradip's contributions to \riptide's compiler were critical to the project's success and I thoroughly enjoyed our work together.
+
+I have been fortunate to recieve an Apple PhD Fellowship in AI/ML and spend a summer at Apple working on machine learning architecture.
+% 
+Jaewon Shin, my manager, helped me navigate research in industry and encouraged me to be independent and pursue difficult but relevant problems.
+
+I want to thank additional CMU colleagues and administrative staff.
+% 
+I thank Harsh Desai, Alexei Colin, and Emily Ruppel for answering my questions on microelectrics and for their support of my work on intermittent computing.
+% 
+I also want to thank the other PhD students in Brandon's and Nathan's groups for providing extremely useful feedback on my research during practice talks and weekly lunch meetings.
+% 
+Finally, I am grateful to Deborah Cavlovich for helping me navigate the logistics of the PhD.
+
+There are several friends I want to highlight that provided advice and support throughout my graduate studies.
+% 
+Michael Rudow, Jack Kosaian, Matt Butrovich, Han Zhang, and Guilio Zhou are fellow CS PhD students and friends. 
+% 
+They not only provided an outlet for discussing my PhD, but also helped me experience Pittsburgh.
+% 
+I am also grateful to George Yu.
+% 
+He provided me valuable advice and a different perspective during our biweekly discussions.
+% 
+He has also been the very best travel companion, willing to meet in whatever corner of the world.
+
+Last but not least, I want to thank my parents and my brother.
+% 
+My parents, Beth and John, encouraged me to pursue a PhD and helped me through the lows and the highs of the process.
+% 
+My brother, Reid, is my best friend and has always been there in whatever situation.
+% 
+I am the man that I am today because of my parents and brother.
+
 
 \end{acknowledgements}
