--- a/paper.tex
+++ b/paper.tex
@@ -255,10 +255,7 @@ Pittsburgh, Pennsylvania 15213
 
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
 
-% Include the appendices of the thesis as separate files from the Appendices folder
-% Uncomment the lines as you write the Appendices
-
-% \include{Appendices/AppendixA}
+\include{appendix/map}
 
 %-------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
